Fixed styling on smaller screens and added more to README

--- a/src/App.css
+++ b/src/App.css
@@ -42,8 +42,8 @@
 .input-group {
   position: relative;
   width: 80vw;
-  left: 7%;
   margin: 2em 0;
+  left: 7%;
 }
 
 .input-group label {
@@ -87,4 +87,35 @@
 	top: -75px;
 	font-size: 24px;
   color: #777777;
+}
+
+.goal-container {
+  background-color: rgb(0, 0, 0, 0.1);
+  border: 3px solid #000;
+  border-radius: 25px;
+  padding: 1em;
+  margin: 0.5em auto;
+}
+
+@media only screen and (max-width: 768px) {
+  .App {
+    margin: 2em auto;
+  }
+
+  .input-group {
+    text-align: center;
+  }
+
+  .input-group label {
+    font-size: 28px;
+  }
+
+  .input-group input {
+    font-size: 28px;
+  } 
+
+  .input-group input:focus ~ label,
+  .input-group input:valid ~ label {
+    font-size: 18px;
+  }
 }
