--- a/src/features/goals/Goals.css
+++ b/src/features/goals/Goals.css
@@ -1,9 +1,8 @@
 /* Goals */
 .goals {
-  width: 90%;
-  left: 5%;
-  right: 5%;
-  position: absolute;
+  width: 90vw;
+  text-align: center;
+  position: relative;
 }
 
 /* Goal */
@@ -29,4 +28,11 @@
 
 .goal-btn-group {
   margin-top: -0.25em;
+}
+
+@media only screen and (max-width: 768px) {
+  .goal {
+    width: 250px;
+    font-size: 22px;
+  }
 }
