--- a/src/features/time/Time.css
+++ b/src/features/time/Time.css
@@ -4,3 +4,8 @@
   text-decoration: none;
 }
 
+@media only screen and (max-width: 480px) {
+  .time {
+    text-align: center;
+  }
+}
